--- a/page3.css
+++ b/page3.css
@@ -33,6 +33,14 @@
     background-color: white;
 
 }
+.img3
+{
+     height: 150px;
+    width:270px;
+ padding: 2% 0%;
+    background-color: white;
+
+}
 #section1
 {
     padding:2% 2%;
